...
                android:text="@string/credit">
            </RadioButton>
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/addDebitRadioButton"
                android:text="@string/debit">
            </RadioButton>

        </RadioGroup>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_name"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="30"/>
...

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_number"
                android:inputType="number"
                android:maxLength="30" />
        </com.google.android.material.textfield.TextInputLayout>
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ValidThruMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/month"
                android:inputType="number"
                android:maxLength="2"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/validThruYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/year"
                android:inputType="number"
                android:maxLength="4"/>
...
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardholderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cardholder_name"
                android:inputType="textPersonName"
                android:maxLength="30"/>
        </com.google.android.material.textfield.TextInputLayout>
...
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/paydayLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/payDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pay_day"
                android:maxLength="2"
                android:inputType="number" />

...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/defaultBankAccountInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addDebitDefaultBankAccountName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bank_account_name"
                    android:maxLength="30"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addDebitDefaultBankAccountNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bank_account_number"
                    android:inputType="number"
                    android:maxLength="30"
                    />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <Button
            android:id="@+id/addCardSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <LinearLayout
            android:id="@+id/updateMarkInactive"
...
