<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.addObject.AddTransaction">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addTransDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:maxLength="60"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/date"
                    android:inputType="date"
                    android:focusable="false" />



                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/timeInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/time"
                    android:inputType="time"
                    android:focusable="false" />


        </LinearLayout>
        

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addTransAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/cardSelector"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <Spinner
            android:id="@+id/bankAccountSelector"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:visibility="gone"/>

        <Spinner
            android:id="@+id/budgetSelector"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <Button
            android:id="@+id/addTransSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <LinearLayout
            android:id="@+id/updateDeleteTrans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">


            <Button
                android:id="@+id/updateTrans"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/update"
                tools:ignore="ButtonStyle"
                />

            <Button
                android:id="@+id/deleteTrans"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                tools:ignore="ButtonStyle"
                android:textColor="@color/biometric_error_color"/>
        </LinearLayout>

    </LinearLayout>



</ScrollView>