<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        android:id="@+id/main_home"/>
    <item
        android:icon="@drawable/ic_baseline_list_alt_24"
        android:title="@string/transactions"
        android:id="@+id/main_transactions"/>
    <item
        android:icon="@drawable/ic_baseline_monetization_on_24"
        android:title="@string/budget"
        android:id="@+id/main_budget"/>
    <item
        android:icon="@drawable/ic_baseline_credit_card_24"
        android:title="@string/cards"
        android:id="@+id/main_cards"/>
</menu>